# grpc-kube-traefik-bazel-test

./: .gitignore  BUILD  DEPENDENCIES.bzl  Tiltfile  WORKSPACE  go.mod
greater-client/: BUILD.bazel  main.go
greater-server/: BUILD.bazel  Dockerfile  kubernetes.yaml  main.go
helloworld/: BUILD.bazel  helloworld.proto
